# django_20.2

./: README.md  pyproject.toml
config/: settings.py
